@@ -1,6 +1,7 @@
 6.1.1:
   * Code cleanup after dropping Python 2.4/2.5 support.
   * PGP key changed.
+  * Support for DB_FORCESYNCENV flag in "DB_ENV.close()".
 
 6.1.0:
   * Support Berkeley DB 6.1.x.
